<resources>
    <string name="app_name">Guess The Number</string>
    <string name="guess_the_number">Guess The Number</string>
    <string name="title_activity_start_game">StartGame</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_game">Play Game</string>
    <string name="you_guessed_the_number">You Guessed the number</string>
    <string name="score">Score:</string>
    <string name="tap_to_continue">tap to continue.....</string>
    <string name="submit">Submit</string>
    <string name="enter_no">Enter No</string>
    <string name="_4_than_the_no_you_have_to_guess">4. Than the no you have to guess..</string>
    <string name="instructions">Instructions:</string>
    <string name="start_game">Start Game</string>
    <string name="_2_you_have_to_guess_that_no">2. You have to Guess that no..</string>
    <string name="_1_there_is_a_random_no_between_1_to_100">1. There is a random no between 1 to 100</string>
    <string name="_3_it_shows_entered_no_is_big_or_small">3. It shows entered no is big or small</string>
    <string name="congratulations">Congratulations..</string>
</resources>