<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Win">

    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-67dp" />

    <TextView
        android:id="@+id/wintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cherry_swash"
        android:gravity="center"
        android:text="@string/you_guessed_the_number"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/konfettiView"
        app:layout_constraintVertical_bias="0.317" />

    <TextView
        android:id="@+id/Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cherry_swash"
        android:text="@string/score"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/konfettiView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/konfettiView"
        app:layout_constraintTop_toBottomOf="@+id/wintext"
        app:layout_constraintVertical_bias="0.204" />

    <Button
        android:id="@+id/tap"
        android:layout_width="409dp"
        android:layout_height="168dp"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        android:onClick="tapped"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_continue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tap"
        app:layout_constraintEnd_toEndOf="@+id/tap"
        app:layout_constraintStart_toStartOf="@+id/tap"
        app:layout_constraintTop_toTopOf="@+id/tap" />

</androidx.constraintlayout.widget.ConstraintLayout>